polaris-ui/src/app/common/presentation/components/Modal.module.scss
.modal {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.4);
  // 1) gov inputs have z-index = 1 when they are focussed, so bigger than 1 required
  // 2) wheeling on the modal does not work with z-index: 2 as pdf-lib.js seems to intercept
  //  the wheel and starts scrolling itself, rather than the modal content.
  // 3) z-index: 3 seems to be given to the text and annotation layer of pdf.js
  // 4) z-index: 4 is used by the pdf viewer redaction summary footer
  // So use z-index: 5
  z-index: 5;
}

.modalContent {
  position: fixed;
  background: white;
  min-width: 600px;
  min-height: 275px;
  top: 10%;
  left: 50%;
  transform: translate(-50%, 0);

  overflow-y: auto;
}
.modalContentData {
  width: 85%;
  height: 80%;
}
.modalHeader {
  margin-bottom: 25px;
  padding-bottom: 3px;
  color: #ffffff;
  background-color: #0b0c0c;
  text-align: right;
}

.closeContainer {
  margin-top: 20px;
  margin-right: 20px;
  text-align: right;
}

.dataModalClose {
  box-sizing: content-box;
  width: 2em;
  height: 2em;
  padding: 0.25em 0.25em;
  color: rgb(231, 12, 12);
  background: transparent
    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e")
    center/1.9em auto no-repeat;
  border: 0;
  border-radius: 0.25rem;
  opacity: 0.5;
  cursor: pointer;
}

.stopHtmlScroll {
  overflow: hidden !important;
}

.alertModalHeader {
  height: 35px;
  border-bottom: none !important;
  text-align: right;
}

.alertModalClose {
  box-sizing: content-box;
  width: 1em;
  height: 1em;
  padding: 0.2em 0.2em;
  margin-right: 1em;
  color: white;
  background: transparent
    url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'%3e%3cpath d='M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z'/%3e%3c/svg%3e")
    center/1.9em auto no-repeat;
  border: 0;
  border-radius: 0.25rem;
  //opacity: 0.5;
  cursor: pointer;
}

